# django-compressor-js

./: LICENSE  README.md  pyproject.toml
django_compressor_js/: precompilers.py
tests/: test_precompilers.py
